fixed overflow of text for small screens

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -80,4 +80,14 @@
     .projects {
         grid-template-columns: 1fr;
     }
+
+    .boxes {
+        div{
+            word-break: break-all;
+        }
+       
+    }
+    
+    
+    
 }
