--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,8 +1,7 @@
 @import 'config';
 @import 'menu';
 
-
-
+//Base
 *{
     box-sizing: border-box;
 }
@@ -76,93 +75,6 @@ main {
     }
 }
 
-.about-info {
-    display: grid;
-    grid-gap: 30px;
-    grid-template-areas:
-     'bioimage bio bio'
-     'job1 job2 job3';
-     grid-template-columns: repeat(3, 1fr);
-
-    
-.bio-image {
-    grid-area: bioimage;
-    margin: auto;
-    border-radius: 50%;
-    border: $secondary-color 3px solid;
-    }
-
-    .bio {
-        grid-area: bio;
-        font-size: 1.5rem;
-    }
-
-    .job-1 {
-        grid-area: job1;
-    }
-
-    .job-2 {
-        grid-area: job2;
-    }
-
-    .job-3 {
-        grid-area: job3;
-    }
-
-    .job {
-        background: lighten($primary-color, 5);
-        padding: 0.5rem;
-        border-bottom: $secondary-color 5px solid;
-    }
-
-}
-
-
-//Work/Projets
-.projects{
-    display: grid;
-    grid-gap: 0.7rem;
-    grid-template-columns: repeat(3, 1fr);
-
-    img{
-        width: 100%;
-        border: 3px #fff solid;
-
-        &:hover {
-            opacity: 0.5;
-            border-color: $secondary-color;
-            @include easeOut;
-        }
-    }
-}
-
-
-// Contact Page
-.boxes {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    margin-top: 1rem;
-
-    div {
-        font-size: 1.5rem;
-        border: 3px #fff solid;
-        padding: .5rem 2rem;
-        margin: 1rem;
-        @include easeOut;
-
-        &:hover {
-            padding: 0.5rem 1.5rem;
-            background: $secondary-color;
-            color: set-text-color($secondary-color);
-
-            span {
-                color: set-text-color($secondary-color);
-            }
-        }
-    }
-}
-
 
 // Button Styles
 .btn {
@@ -196,5 +108,5 @@ main {
     background: darken($primary-color, 10);
     height: 60px;
 }
-
+@import 'pages';
 @import 'mobile';
